Web: out_of_route stops always visibles if sidebar is extended

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -172,6 +172,10 @@
           display: inline-block;
           vertical-align: top;
           margin: 2px;
+
+          #out_of_route {
+            display: block !important;
+          }
         }
       }
     }
